tests/ui/force-inlining/invalid.stderr
error: allow, cfg, cfg_attr, deny, expect, forbid, and warn are the only allowed built-in attributes in function parameters
  --> $DIR/invalid.rs:132:11
   |
LL | fn barqux(#[rustc_force_inline] _x: u32) {}
   |           ^^^^^^^^^^^^^^^^^^^^^

error[E0805]: malformed `rustc_force_inline` attribute input
  --> $DIR/invalid.rs:15:1
   |
LL | #[rustc_force_inline(bar, baz)]
   | ^^^^^^^^^^^^^^^^^^^^----------^
   |                     |
   |                     expected a single argument here
   |
help: try changing it to one of the following valid forms of the attribute
   |
LL - #[rustc_force_inline(bar, baz)]
LL + #[rustc_force_inline = "reason"]
   |
LL - #[rustc_force_inline(bar, baz)]
LL + #[rustc_force_inline(reason)]
   |
LL - #[rustc_force_inline(bar, baz)]
LL + #[rustc_force_inline]
   |

error[E0539]: malformed `rustc_force_inline` attribute input
  --> $DIR/invalid.rs:20:1
   |
LL | #[rustc_force_inline(2)]
   | ^^^^^^^^^^^^^^^^^^^^^-^^
   |                      |
   |                      expected a string literal here
   |
help: try changing it to one of the following valid forms of the attribute
   |
LL - #[rustc_force_inline(2)]
LL + #[rustc_force_inline = "reason"]
   |
LL - #[rustc_force_inline(2)]
LL + #[rustc_force_inline(reason)]
   |
LL - #[rustc_force_inline(2)]
LL + #[rustc_force_inline]
   |

error[E0539]: malformed `rustc_force_inline` attribute input
  --> $DIR/invalid.rs:25:1
   |
LL | #[rustc_force_inline = 2]
   | ^^^^^^^^^^^^^^^^^^^^^^^-^
   |                        |
   |                        expected a string literal here
   |
help: try changing it to one of the following valid forms of the attribute
   |
LL - #[rustc_force_inline = 2]
LL + #[rustc_force_inline = "reason"]
   |
LL - #[rustc_force_inline = 2]
LL + #[rustc_force_inline(reason)]
   |
LL - #[rustc_force_inline = 2]
LL + #[rustc_force_inline]
   |

error: attribute should be applied to a function
  --> $DIR/invalid.rs:30:1
   |
LL | #[rustc_force_inline]
   | ^^^^^^^^^^^^^^^^^^^^^
LL |
LL | extern crate std as other_std;
   | ------------------------------ not a function definition

error: attribute should be applied to a function
  --> $DIR/invalid.rs:34:1
   |
LL | #[rustc_force_inline]
   | ^^^^^^^^^^^^^^^^^^^^^
LL |
LL | use std::collections::HashMap;
   | ------------------------------ not a function definition

error: attribute should be applied to a function
  --> $DIR/invalid.rs:38:1
   |
LL | #[rustc_force_inline]
   | ^^^^^^^^^^^^^^^^^^^^^
LL |
LL | static _FOO: &'static str = "FOO";
   | ---------------------------------- not a function definition

error: attribute should be applied to a function
  --> $DIR/invalid.rs:42:1
   |
LL | #[rustc_force_inline]
   | ^^^^^^^^^^^^^^^^^^^^^
LL |
LL | const _BAR: u32 = 3;
   | -------------------- not a function definition

error: attribute should be applied to a function
  --> $DIR/invalid.rs:46:1
   |
LL | #[rustc_force_inline]
   | ^^^^^^^^^^^^^^^^^^^^^
LL |
LL | mod foo { }
   | ----------- not a function definition

error: attribute should be applied to a function
  --> $DIR/invalid.rs:50:1
   |
LL |   #[rustc_force_inline]
   |   ^^^^^^^^^^^^^^^^^^^^^
LL |
LL | / unsafe extern "C" {
LL | |     #[rustc_force_inline]
LL | |
LL | |     static X: &'static u32;
...  |
LL | |     fn foo();
LL | | }
   | |_- not a function definition

error: attribute should be applied to a function
  --> $DIR/invalid.rs:66:1
   |
LL | #[rustc_force_inline]
   | ^^^^^^^^^^^^^^^^^^^^^
LL |
LL | type Foo = u32;
   | --------------- not a function definition

error: attribute should be applied to a function
  --> $DIR/invalid.rs:70:1
   |
LL |   #[rustc_force_inline]
   |   ^^^^^^^^^^^^^^^^^^^^^
LL |
LL | / enum Bar<#[rustc_force_inline] T> {
LL | |
LL | |     #[rustc_force_inline]
...  |
LL | | }
   | |_- not a function definition

error: attribute should be applied to a function
  --> $DIR/invalid.rs:72:10
   |
LL | enum Bar<#[rustc_force_inline] T> {
   |          ^^^^^^^^^^^^^^^^^^^^^ - not a function definition

error: attribute should be applied to a function
  --> $DIR/invalid.rs:74:5
   |
LL |     #[rustc_force_inline]
   |     ^^^^^^^^^^^^^^^^^^^^^
LL |
LL |     Baz(std::marker::PhantomData<T>),
   |     -------------------------------- not a function definition

error: attribute should be applied to a function
  --> $DIR/invalid.rs:79:1
   |
LL |   #[rustc_force_inline]
   |   ^^^^^^^^^^^^^^^^^^^^^
LL |
LL | / struct Qux {
LL | |     #[rustc_force_inline]
LL | |
LL | |     field: u32,
LL | | }
   | |_- not a function definition

error: attribute should be applied to a function
  --> $DIR/invalid.rs:82:5
   |
LL |     #[rustc_force_inline]
   |     ^^^^^^^^^^^^^^^^^^^^^
LL |
LL |     field: u32,
   |     ---------- not a function definition

error: attribute should be applied to a function
  --> $DIR/invalid.rs:87:1
   |
LL |   #[rustc_force_inline]
   |   ^^^^^^^^^^^^^^^^^^^^^
LL |
LL | / union FooBar {
LL | |     x: u32,
LL | |     y: u32,
LL | | }
   | |_- not a function definition

error: attribute should be applied to a function
  --> $DIR/invalid.rs:94:1
   |
LL |   #[rustc_force_inline]
   |   ^^^^^^^^^^^^^^^^^^^^^
LL |
LL | / trait FooBaz {
LL | |     #[rustc_force_inline]
LL | |
LL | |     type Foo;
...  |
LL | |     fn foo() {}
LL | | }
   | |_- not a function definition

error: attribute should be applied to a function
  --> $DIR/invalid.rs:109:1
   |
LL | #[rustc_force_inline]
   | ^^^^^^^^^^^^^^^^^^^^^
LL |
LL | trait FooQux = FooBaz;
   | ---------------------- not a function definition

error: attribute should be applied to a function
  --> $DIR/invalid.rs:113:1
   |
LL |   #[rustc_force_inline]
   |   ^^^^^^^^^^^^^^^^^^^^^
LL |
LL | / impl<T> Bar<T> {
LL | |     #[rustc_force_inline]
LL | |
LL | |     fn foo() {}
LL | | }
   | |_- not a function definition

error: attribute should be applied to a function
  --> $DIR/invalid.rs:121:1
   |
LL |   #[rustc_force_inline]
   |   ^^^^^^^^^^^^^^^^^^^^^
LL |
LL | / impl<T> FooBaz for Bar<T> {
LL | |     type Foo = u32;
LL | |     const Bar: i32 = 3;
LL | | }
   | |_- not a function definition

error: attribute should be applied to a function
  --> $DIR/invalid.rs:128:1
   |
LL | #[rustc_force_inline]
   | ^^^^^^^^^^^^^^^^^^^^^
LL |
LL | macro_rules! barqux { ($foo:tt) => { $foo }; }
   | ---------------------------------------------- not a function definition

error: attribute should be applied to a function
  --> $DIR/invalid.rs:132:11
   |
LL | fn barqux(#[rustc_force_inline] _x: u32) {}
   |           ^^^^^^^^^^^^^^^^^^^^^--------
   |           |
   |           not a function definition

error: attribute cannot be applied to a `async`, `gen` or `async gen` function
  --> $DIR/invalid.rs:136:1
   |
LL | #[rustc_force_inline]
   | ^^^^^^^^^^^^^^^^^^^^^
LL |
LL | async fn async_foo() {}
   | -------------------- `async`, `gen` or `async gen` function

error: attribute cannot be applied to a `async`, `gen` or `async gen` function
  --> $DIR/invalid.rs:140:1
   |
LL | #[rustc_force_inline]
   | ^^^^^^^^^^^^^^^^^^^^^
LL |
LL | gen fn gen_foo() {}
   | ---------------- `async`, `gen` or `async gen` function

error: attribute cannot be applied to a `async`, `gen` or `async gen` function
  --> $DIR/invalid.rs:144:1
   |
LL | #[rustc_force_inline]
   | ^^^^^^^^^^^^^^^^^^^^^
LL |
LL | async gen fn async_gen_foo() {}
   | ---------------------------- `async`, `gen` or `async gen` function

error: attribute should be applied to a function
  --> $DIR/invalid.rs:149:14
   |
LL |     let _x = #[rustc_force_inline] || { };
   |              ^^^^^^^^^^^^^^^^^^^^^ ------ not a function definition

error: attribute should be applied to a function
  --> $DIR/invalid.rs:151:14
   |
LL |     let _y = #[rustc_force_inline] 3 + 4;
   |              ^^^^^^^^^^^^^^^^^^^^^ - not a function definition

error: attribute should be applied to a function
  --> $DIR/invalid.rs:153:5
   |
LL |     #[rustc_force_inline]
   |     ^^^^^^^^^^^^^^^^^^^^^
LL |
LL |     let _z = 3;
   |     ----------- not a function definition

error: attribute should be applied to a function
  --> $DIR/invalid.rs:158:9
   |
LL |         #[rustc_force_inline]
   |         ^^^^^^^^^^^^^^^^^^^^^
LL |
LL |         1 => (),
   |         ------- not a function definition

error: attribute should be applied to a function
  --> $DIR/invalid.rs:97:5
   |
LL |     #[rustc_force_inline]
   |     ^^^^^^^^^^^^^^^^^^^^^
LL |
LL |     type Foo;
   |     --------- not a function definition

error: attribute should be applied to a function
  --> $DIR/invalid.rs:100:5
   |
LL |     #[rustc_force_inline]
   |     ^^^^^^^^^^^^^^^^^^^^^
LL |
LL |     const Bar: i32;
   |     --------------- not a function definition

error: attribute should be applied to a function
  --> $DIR/invalid.rs:104:5
   |
LL |     #[rustc_force_inline]
   |     ^^^^^^^^^^^^^^^^^^^^^
LL |
LL |     fn foo() {}
   |     ----------- not a function definition

error: attribute should be applied to a function
  --> $DIR/invalid.rs:116:5
   |
LL |     #[rustc_force_inline]
   |     ^^^^^^^^^^^^^^^^^^^^^
LL |
LL |     fn foo() {}
   |     ----------- not a function definition

error: attribute should be applied to a function
  --> $DIR/invalid.rs:53:5
   |
LL |     #[rustc_force_inline]
   |     ^^^^^^^^^^^^^^^^^^^^^
LL |
LL |     static X: &'static u32;
   |     ----------------------- not a function definition

error: attribute should be applied to a function
  --> $DIR/invalid.rs:57:5
   |
LL |     #[rustc_force_inline]
   |     ^^^^^^^^^^^^^^^^^^^^^
LL |
LL |     type Y;
   |     ------- not a function definition

error: attribute should be applied to a function
  --> $DIR/invalid.rs:61:5
   |
LL |     #[rustc_force_inline]
   |     ^^^^^^^^^^^^^^^^^^^^^
LL |
LL |     fn foo();
   |     --------- not a function definition

error: aborting due to 37 previous errors

Some errors have detailed explanations: E0539, E0805.
For more information about an error, try `rustc --explain E0539`.
